--- a/src/components/input.css
+++ b/src/components/input.css
@@ -8,3 +8,10 @@
     color: #555;
     left:4%;
   }
+.textWarning{
+  border: 4px solid rgb(255, 85, 85);
+}
+
+.textMessage{
+  color: rgb(246, 103, 103);
+}
