--- a/src/components/button.css
+++ b/src/components/button.css
@@ -3,7 +3,7 @@
     display: flex;
     position: relative;
     /* height: 9%; */
-    width: 9%;
+    width: 90px;
     background-color: bisque;
     border: 1px solid rgb(135, 135, 102);
     border-radius: 20%;
