--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   border: .5px solid navajowhite;
   border-radius: 2%;
   padding: 3%;
-  height: 80vh;
+  /* height: 80vh; */
   box-shadow: 2px  2px;
 }
 .cardContainer{
