--- a/src/components/button.css
+++ b/src/components/button.css
@@ -2,6 +2,7 @@
     padding: .7%;
     display: flex;
     position: relative;
+    margin-bottom: 4%;
     /* height: 9%; */
     width: 90px;
     background-color: bisque;
